hphp/hack/test/typecheck/reactive/only_first_error/test_rx_enabled6.php.exp
File "test_rx_enabled6.php", line 13, characters 10-11:
Was expecting a return type hint (Typing[4030])
