hphp/hack/test/typecheck/reactive/only_first_error/test_rx_enabled6.php
<?hh // strict

<<__Pure>>
function f(): int {
  if (HH\Rx\IS_ENABLED) {
    return rx();
  } else {
    return nonrx();
  }
}

<<__Pure>>
function rx() {
  return 1;
}

function nonrx() {
  return 1;
}
